
2006-01-24  Brian Granger <ellisonbg@gmail.com>

	This covers commits over the last month and a half.  During this
	time the mainline development has moved to the saw branch.  From 
	here out, the saw branch should be used.  However, it should be noted
	that certain things that worked in the chainsaw branch are being
	depreciated in the saw branch:
	
	* All the vanilla protocols are being depreciated.  This is because
	they do not propagate errors properly.  With this said, they should
	still work for most things our interactive RemoteController class
	still uses this protocol.  Until we have a full PB or XML-RPC
	replacement for this client, the vanilla client will remain the
	default in kernel.api.  
	
	* The global setting of a MAX_MESSAGE_SIZE variable for network
	protocols.  Currently, this should be set internally to each specific
	network protocol.  I have created a pbconfig.py file that sets it 
	for any PB users.
	
	The saw branch has significant changes to the way errors are handled:
	
	* Errors are now propagated fully in the PB protocols and we now have
	tests to make sure that errors do propagate properly.
	
	* Our error propagation mechanism insures that the type of the 
	exception in preserved and that *some* reasonable message is given
	to the user.  The message still needs work though.
	
	* Remote exceptions should always raise in the users namespace.
	
	* Exceptions are always agressive.  If one of many actions fail they the
	overall action will fail upon the first failure.
	
	* A failure in a QueuedEngine method will clear the queue of any pending 
	commands.
	
	Design and API changes:
	
	* The controller has been factored into downward (towards the engines) and upward
	(towards the client) interfaces.  This is done to make it easy to adapt the basic
	controller to different interfaces.  Our current one is the multiengine interface.
	
	* The notification API has been completely removed from the controller.  Different