@@ -25,5 +25,6 @@ from pprint import pformat, pprint
 
 # From the IPython test lib
 import tutils
+from tutils import test_path
 
 from ipython1.test import ipdoctest
