@@ -1,0 +1,48 @@
+=========================================
+ Doctests for the ``tools.utils`` module
+=========================================
+
+The way doctest loads these, the entire document is applied as a single test
+rather than multiple individual ones, unfortunately.
+
+
+Auto-generated tests
+====================
+
+............................................................................
+Begin included file test_tools_utils_doctest.py::
+
+    # Setup - all imports are done in tcommon
+    >>> import tcommon; reload(tcommon)  # for interactive use
+    <module 'tcommon' from 'tcommon.pyc'>
+    >>> from tcommon import *
+    
+    # Doctest code begins here
+    >>> from ipython1.tools import utils
+    
+    >>> for i in range(10):
+    ...     print i,
+    ...     print i+1
+    ... 
+    0 1
+    1 2
+    2 3
+    3 4
+    4 5
+    5 6
+    6 7
+    7 8
+    8 9
+    9 10
+    >>> print 'simple loop is over'
+    simple loop is over
+    
+End included file test_tools_utils_doctest.py
+............................................................................
+
+
+Manually generated tests
+========================
+
+These are one-off tests written by hand, copied from an interactive prompt.
+    
